...
            android:textSize="30dp"
            android:text="Neighbour name"
            android:textStyle="bold" />

        <!-- DECLARING FLOATING ACTION BUTTON -->
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/item_is_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_gravity="end|bottom"
            android:clickable="true"
            android:src="@drawable/ic_star_border_white_24dp" />
...
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_view_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:text="Neighbour name"
...
